# 4D_ray_tracing

./: CMakeLists.txt  README.md
executable/: README.md  properties.txt  shader.frag
inc/: controls.h  main.h  math.h  properties.h  util.h
inc/util/: math.h  util.h
inc/windows/: single_window_group.h  three_window_group.h  windows.h
scenes/: Гиперкуб.frag  Комната со сферой.frag  Фигура tiger.frag  Четырёхмерный цилиндр.frag  Шар, плоскость и светилник.frag  комната со сферой.frag  шар, плоскость и светилник.frag
src/: controls.cpp  main.cpp  math.cpp  properties.cpp  shader.frag  util.cpp
src/util/: math.cpp
src/windows/: single_window_group.cpp  three_window_group.cpp  windows.cpp
