cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 14)
project(ray_tracing)

include_directories(inc)
set(EXECUTABLE_OUTPUT_PATH ../executable)
add_executable(ray_tracing src/main.cpp src/controls.cpp src/util.cpp src/math.cpp src/properties.cpp)
set(SFML_ROOT_DIR lib/SFML-2.5.1)

set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_BUILD_DOC FALSE)
set(SFML_DIR ${SFML_ROOT_DIR}/lib/cmake/SFML)
find_package(SFML COMPONENTS system window graphics REQUIRED)
include_directories(${SFML_ROOT_DIR}/include)
target_link_libraries(ray_tracing sfml-system sfml-window sfml-graphics)